testsuite/tests/polykinds/T7433.hs
{-# LANGUAGE GHC2021 #-}
data N = Z
type T = 'Z
